Update service start command in docs.html
Changed the service startup command from 'python start.py' to 'python app.py' in docs.html to reflect the correct entry point. Also updated database and log files with new records.

--- a/templates/docs.html
+++ b/templates/docs.html
@@ -69,7 +69,7 @@
                                         </p>
                                         <div class="code-block">
                                             <pre><code># 启动服务
-python start.py</code></pre>
+python app.py</code></pre>
                                         </div>
                                     </div>
                                 </div>
@@ -346,7 +346,7 @@ python start.py</code></pre>
                                 <div class="command-group">
                                     <h4>1. 启动服务</h4>
                                     <div class="code-block">
-                                        <pre><code>python start.py</code></pre>
+                                        <pre><code>python app.py</code></pre>
                                     </div>
                                 </div>
 
